docs/components_versioned_docs/version-6.1.0/index.md
<!--
    Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.
-->

---

title: Component Library
sidebar_position: 1
---

# Superset Component Library

Welcome to the Apache Superset Component Library documentation. This section provides comprehensive documentation for all the UI components, chart components, and layout components used in Superset.

## What is the Component Library?

The Component Library is a collection of reusable UI components that are used to build the Superset user interface. These components are designed to be consistent, accessible, and easy to use.

## Component Categories

The Component Library is organized into the following categories:

### UI Components

Basic UI components like buttons, inputs, dropdowns, and other form elements.

### Chart Components

Visualization components used to render different types of charts and graphs.

### Layout Components

Components used for page layout, such as containers, grids, and navigation elements.

## Versioning

The Component Library documentation follows its own versioning scheme, independent from the main Superset documentation. This allows us to update the component documentation as the components evolve, without affecting the main documentation.

## Getting Started

Browse the sidebar to explore the different components available in the library. Each component documentation includes:

- Component description and purpose
- Props and configuration options
- Usage examples
- Best practices
